// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders background color 1`] = `
<span
  className="badge bg-red"
>
  18
</span>
`;

exports[`Renders default 1`] = `
<span
  className="badge"
>
  14
</span>
`;
